<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:background="#fff">

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there_welcome_back"
            android:textSize="40sp"
            android:transitionName="logo_text"
            android:textColor="#000"
            android:layout_marginTop="35dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="334dp"
            android:layout_height="286dp"
            android:layout_gravity="center_horizontal"
            tools:src="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:background="@drawable/img">



        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/user"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/username1"
            android:textColorHint="#fff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="10dp"
            android:layout_marginTop="50dp"
            android:nextFocusDown="@id/password"
            android:privateImeOptions="horizontalAlignment=left"
             />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:textColorHint="#fff"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:drawablePadding="10dp"
            android:nextFocusDown="@id/forgot_password"
            android:nextFocusUp="@id/user"
            android:privateImeOptions="horizontalAlignment=left"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginRight="90dp"
                android:background="@drawable/button"
                android:elevation="0dp"
                android:text="@string/forget_password"
                android:id="@+id/forgot_password"
                android:nextFocusUp="@id/password"
                android:nextFocusDown="@id/go"
                />

            <Button
                android:id="@+id/go"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button"
                android:text="@string/go"
                android:textColor="#fff"
                android:padding="10dp"
                android:layout_gravity="center"
                android:nextFocusUp="@id/forgot_password"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>